ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "helloworld.34.96.206.204.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-ingress
spec:
  hosts:
  - "helloworld.34.96.206.204.nip.io"
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: helloworld
        port:
          number: 8080
